--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                                
         <li>
     
-                                                <a href="project-list.html" title="Project list">
+                                                <a href="project-list.html" title="Projects">
                     <i class="none"></i>
-                Project list</a>
+                Projects</a>
                     </li>
                         </ul>
 
@@ -116,7 +116,7 @@
   limitations under the License. --><div class="section">
 <h2>Welcome!<a name="Welcome"></a></h2>
 <p>Welcome to the <b>Hippo Forge on Github</b>, the community place for plugins, add-ons and extensions built on top of Hippo CMS or Hippo DX.</p>
-<p>This documentation site for the projects at <a class="externalLink" href="https://onehippo-forge.github.com">onehippo-forge.github.com</a> will contain an overview of projects at <a href="project-list.html">the project list page</a>.</p>
+<p>This documentation site for the projects at <a class="externalLink" href="https://github.com/onehippo-forge">github.com/onehippo-forge</a> will contain an overview of projects at <a href="project-list.html">the project list page</a>.</p>
 <p>Initially this space will contain projects that will be migrated in Q1 2017 from the discontinued Hippo Forge at <a class="externalLink" href="https://forge.onehippo.org">forge.onehippo.org</a>.</p>
 <p>For general information about Hippo, see <a class="externalLink" href="https://www.onehippo.com">onehippo.com</a> and <a class="externalLink" href="https://www.onehippo.org">onehippo.org</a></p></div>
             </div>
