--- a/development.html
+++ b/development.html
@@ -103,28 +103,32 @@
         
         <div id="bodyColumn"  class="span9" >
                                 
-            <h1>Project Development</h1>
+            <div class="section">
+<h2>Project Development<a name="Project_Development"></a></h2>
 <p>On the Hippo Forge, projects are maintained by Hippo. Hippo will not give push rights to external developers. </p>
 <div class="section">
-<h2>Code Contributions<a name="Code_Contributions"></a></h2>
+<h3>Code Contributions<a name="Code_Contributions"></a></h3>
 <p>On GitHub, code contributions exist in the form of pull requests. External organisations can always drive those pull requests, or feature requests, or release requests by contacting our services department.</p>
 <p>TODO [link]</p>
 <div class="section">
-<h3>Forking<a name="Forking"></a></h3>
-<p>Forking into other (non-Hippo) GitHub locations is of course a possibility for further development on behalf of your project as well. In fact, a fork is the starting point of a pull request! TODO [link]</p></div></div>
 <div class="section">
-<h2>Branching strategy<a name="Branching_strategy"></a></h2>
-<p>TODO git flow</p>
+<h5>Forking<a name="Forking"></a></h5>
+<p>Forking into other (non-Hippo) GitHub locations is of course a possibility for further development on behalf of your project as well. In fact, a fork is the starting point of a pull request! TODO [link]</p></div></div></div>
 <div class="section">
-<h3>Artifact Repository<a name="Artifact_Repository"></a></h3>
-<p>Hippo Maven Repository at <a class="externalLink" href="http://maven.onehippo.com/maven2/org/onehippo/forge/">maven.onehippo.com/maven2/</a> (in <tt>org/onehippo/forge</tt> subfolder).</p>
-<p>Maybe later we&#x2019;ll move to Maven Central.</p></div>
+<h3>Branching Strategy<a name="Branching_Strategy"></a></h3>
+<p>TODO git flow [link] </p></div>
 <div class="section">
-<h3>Issue Tracking<a name="Issue_Tracking"></a></h3>
+<h3>External Systems<a name="External_Systems"></a></h3>
+<div class="section">
+<div class="section">
+<h5>Artifact Repository<a name="Artifact_Repository"></a></h5>
+<p>Hippo Maven Repository at <a class="externalLink" href="http://maven.onehippo.com/maven2/org/onehippo/forge/">maven.onehippo.com/maven2/</a> (in <tt>org/onehippo/forge</tt> subfolder). Maybe later we&#x2019;ll move to Maven Central.</p></div>
+<div class="section">
+<h5>Issue Tracking<a name="Issue_Tracking"></a></h5>
 <p>Hippo&#x2019;s JIRA at <a class="externalLink" href="https://issues.onehippo.com/browse/HIPFORGE">issues.onehippo.com/browse/HIPFORGE</a></p></div>
 <div class="section">
-<h3>Continuous Integration<a name="Continuous_Integration"></a></h3>
-<p>Travis at <a class="externalLink" href="https://travis-ci.org/onehippo-forge/">travis-ci.org/onehippo-forge/</a></p></div></div>
+<h5>Continuous Integration<a name="Continuous_Integration"></a></h5>
+<p>Travis at <a class="externalLink" href="https://travis-ci.org/onehippo-forge/">travis-ci.org/onehippo-forge/</a></p></div></div></div></div>
             </div>
         </div>
     </div>
