--- a/development.html
+++ b/development.html
@@ -130,7 +130,7 @@
 <div class="section">
 <h3>Branching Strategy<a name="Branching_Strategy"></a></h3>
 <p>We like to adhere to the the well-established <a class="externalLink" href="http://nvie.com/posts/a-successful-git-branching-model/">Git Flow by Vincent Driessen</a>.</p>
-<p>In short, the &#x2018;master&#x2019; branch is always the same as the latest release, whilst the &#x2018;develop&#x2019; branch is used as base for features and bugfixes. We intend to write some more detailed documentation on how to hanlde branching and releasing.</p></div>
+<p>In short, the &#x2018;master&#x2019; branch is always the same as the latest release, whilst the &#x2018;develop&#x2019; branch is used as base for features and bugfixes. We intend to write some more detailed documentation on how to handle branching and releasing.</p></div>
 <div class="section">
 <h3>Artifact Repository<a name="Artifact_Repository"></a></h3>
 <p>We publish to the Hippo Maven Forge Repository at <a class="externalLink" href="http://maven.onehippo.com/maven2-forge/">maven.onehippo.com/maven2-forge/</a>.</p>
