--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
 <div class="section">
 <h3>The projects<a name="The_projects"></a></h3>
 <p>See <a href="project-list.html">the project list page</a> for an overview of all projects at hosted at <a class="externalLink" href="https://github.com/onehippo-forge">github.com/onehippo-forge</a>.</p>
-<p>Initially, 33 selected projects were migrated in March 2017 from the discontinued Hippo SVN Forge at <a class="externalLink" href="https://forge.onehippo.org">forge.onehippo.org</a>.</p></div>
+<p>Initially, 33 selected projects were migrated in March 2017 from the discontinued Hippo SVN Forge at <a class="externalLink" href="https://forge.onehippo.org">forge.onehippo.org</a>.</p>
+<p><b>URL Rewriter exception</b><br />The URL Rewriter plugin has been so successful that it has migrated to <a class="externalLink" href="https://code.onehippo.org/cms-community/hippo-plugin-urlrewriter">Hippo GitLab</a> instead of GitHub.</p></div>
 <div class="section">
 <h3>Development<a name="Development"></a></h3>
 <p>See <a href="development.html">the development page</a> for some standards regarding developing a plugin project. There is also a <a href="checklist.html">quality checklist</a>. </p></div>
