Add maven2-forge o redirect message

--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
             <p class="alert alert-success">
     <b>Redirected here?</b><br />
     You may have been redirected here from <a class="externalLink" href="https://forge.onehippo.org">forge.onehippo.org</a>.<br />
-    That Hippo SVN Forge has been discontinued on 16 March 2017 and followed up on GitHub at <a class="externalLink" href="https://github.com/onehippo-forge">github.com/onehippo-forge</a> 
+    That Hippo SVN Forge has been discontinued on 16 March 2017 and followed up on GitHub at <a class="externalLink" href="https://github.com/onehippo-forge">github.com/onehippo-forge</a><br/>
+    Artifacts can be retrieved from the Hippo Maven Forge Repository at <a href="http://maven.onehippo.com/maven2-forge/">maven.onehippo.com/maven2-forge</a>.
 </p>
 <div class="section">
 <h2>Welcome!<a name="Welcome"></a></h2>
