Adding issue (jira) id in commit or tag command examples.

--- a/support-release-process.html
+++ b/support-release-process.html
@@ -125,7 +125,7 @@
 <h3><a name="Tag_and_publish_the_Tag"></a>Tag and publish the Tag</h3>
 
 <div class="source">
-<div class="source"><pre>    git tag -a 1.1.2 -m &quot;Tagging 1.1.2&quot;
+<div class="source"><pre>    git tag -a 1.1.2 -m &quot;&lt;ISSUE_ID&gt;: Tagging 1.1.2&quot;
     git tag -l
     git push origin 1.1.2
 </pre></div></div></div>
